sandbox/output
TicketDispenserTest.java:98: error: cannot find symbol
        TurnNumberSequence turnNumberSequenceRegular = new TurnNumberSequenceRegular(2001);
                                                           ^
  symbol:   class TurnNumberSequenceRegular
  location: class TicketDispenserTest
1 error
